<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="#ffffff"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/toolbar"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/name"/>
    <RadioGroup
        android:id="@+id/cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/phone">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doubleCheese"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"/>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/cheese">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round"/>
    </RadioGroup>
    <RelativeLayout
        android:id="@+id/topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/shape">
        <CheckBox
            android:id="@+id/peppe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni"/>
        <CheckBox
            android:id="@+id/nuke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mushroom"
            android:layout_toRightOf="@id/peppe"/>
        <CheckBox
            android:id="@+id/vegeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veggies"
            android:layout_toRightOf="@id/nuke"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/ord1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#a8a8a8"
        android:textSize="20sp"
        android:layout_below="@id/topping"/>

    <TextView
        android:id="@+id/ord2"
        android:layout_width="383dp"
        android:layout_height="200dp"
        android:layout_below="@id/ord1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#a8a8a8"
        android:text=""
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/ord2">
        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

        <Button
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="79dp"
            android:layout_toRightOf="@id/exit"
            android:text="@string/sms" />
    </RelativeLayout>

</RelativeLayout>