<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:background="#0080FF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/name_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="number"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_EditText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:theme="@style/MyRadioButton"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_EditText">

        <RadioButton
            android:id="@+id/cheese"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/cheese" />

        <RadioButton
            android:id="@+id/doubleCheese"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/doubleCheese" />

        <RadioButton
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/none" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:theme="@style/MyRadioButton"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_EditText">

        <RadioButton
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/square" />

        <RadioButton
            android:id="@+id/round"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/round" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:text="@string/pepperoni"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/mushroom"
        app:layout_constraintBottom_toTopOf="@+id/order"
        app:layout_constraintStart_toEndOf="@+id/checkbox1" />

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/veggies"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox2"
        app:layout_constraintStart_toEndOf="@+id/checkbox2" />

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="332dp"
        android:alpha="0.6"
        android:text="@string/order"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="202dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="155dp"
        android:background="#E0E0E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_btn"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_custom_button"
        android:text="@string/exit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/sms_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sms_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sms_btn"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/ic_custom_button"
        android:text="@string/sms"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>